<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">天富天承</string>
    <string name="ad_name">首页</string>
    <string name="trade_name">交易</string>
    <string name="c2c_name">OTC</string>
    <string name="mycenter_name">我的</string>
    <string name="increaseList">涨幅榜</string>
    <string name="favorites">自选</string>
    <string name="query_coin">请搜索通证</string>
    <string name="search">搜索通证</string>
    <string name="buy">买入</string>
    <string name="sale">卖出</string>
    <string name="unsettled">未成交</string>
    <string name="some_clinch_a_deal">部分成交</string>
    <string name="traded">已成交</string>
    <string name="revocation">已撤单</string>
    <string name="current">当前委托</string>
    <string name="history">历史委托</string>
    <string name="all">全部</string>
    <string name="entrust">明细</string>
    <string name="detail">成交</string>
    <string name="timeLine">分时</string>
    <string name="time5Line">5分</string>
    <string name="time15Line">15分</string>
    <string name="time30Line">30分</string>
    <string name="time60Line">1小时</string>
    <string name="time4hLine">4小时</string>
    <string name="timeDayLine">日线</string>
    <string name="timeWeekLine">周线</string>
    <string name="tradeLine">交易行情</string>
    <string name="trade_message1">委托价格不能为空</string>
    <string name="trade_message2">可卖数量不足</string>
    <string name="trade_message3">数量不能为空</string>
    <string name="register">注册</string>
    <string name="nation">国家</string>
    <string name="phoneNo">手机号码</string>
    <string name="email">邮箱</string>
    <string name="code">获取验证码</string>
    <string name="code_no">验证码</string>
    <string name="name">账号  </string>
    <string name="new_pwd">新密码  </string>
    <string name="loginPwd">登录密码</string>
    <string name="configPwd">确认密码</string>
    <string name="invitationCode">邀请码</string>
    <string name="emailRegiest">邮箱注册</string>
    <string name="phoneRegiest">手机注册</string>
    <string name="alreadyLogin">已有账户，去登录</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="noAccount">没有账号，去注册</string>
    <string name="name_hit">请输入邮箱或者手机号</string>
    <string name="pwd_hit">请输入6-16位数字字母符号</string>
    <string name="login">登录</string>
    <string name="reset">确认重置</string>
    <string name="next">下一步</string>
    <string name="back">上一步</string>
    <string name="configReset">确认重置</string>
    <string name="phoneEdit">请输入手机号码</string>
    <string name="emailEdit">请输入邮箱号码</string>
    <string name="codeEdit">请输入验证码</string>
    <string name="loginEdit">请输入登录密码</string>
    <string name="queryEdit">请输入确认密码</string>
    <string name="inviteEdit">请输入邀请码（非必填）</string>
    <string name="network_blocking">网络消化不良</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确认</string>
    <string name="title_otc">OTC</string>
    <string name="title_unpaid">待付款</string>
    <string name="title_paid">已付款</string>
    <string name="title_submit_appeal">提出申诉</string>
    <string name="title_appealing">申诉中</string>
    <string name="title_canceled">已取消</string>
    <string name="title_completed">交易完成</string>
    <string name="title_payment_method">支付方式</string>
    <string name="publish_ad">发布OTC</string>
    <string name="update_payment_method">修改支付方式</string>
    <string name="buy1">购买</string>
    <string name="sale1">出售</string>
    <string name="tx_type">交易类型</string>
    <string name="buy_online">在线购买</string>
    <string name="sell_online">在线卖出</string>
    <string name="tx_coin">通证</string>
    <string name="tx_currency">交易货币</string>
    <string name="only_price">单价</string>
    <string name="quantity">数量</string>
    <string name="tx_min_amount">最小交易数量</string>
    <string name="tx_max_amount">最大交易数量</string>
    <string name="tx_method">交易方式</string>
    <string name="tx_pwd">交易密码</string>
    <string name="hint_keep_2_decimal">保留 2 位小数</string>
    <string name="hint_keep_x_decimal">保留 %1$d 位小数</string>
    <string name="hint_at_least">最小</string>
    <string name="hint_at_most">最大</string>
    <string name="hint_pls_enter_pwd">请输入交易密码</string>
    <string name="toast_post_ad_suc">发布广告成功!</string>
    <string name="cny_setting">CNY设置</string>
    <string name="usd_setting">USD设置</string>
    <string name="weChat">微信</string>
    <string name="zfb">支付宝</string>
    <string name="paypal">PayPal</string>
    <string name="epay">Epay</string>
    <string name="Name">姓名</string>
    <string name="bank">银行</string>
    <string name="bank_address">开户地址</string>
    <string name="bank_card">银行卡号</string>
    <string name="bank_card_confirm">确认卡号</string>
    <string name="setting_tx_pwd">交易密码</string>
    <string name="note">备注</string>
    <string name="enable">启用</string>
    <string name="save_bank_setting">保存网银支付设置</string>
    <string name="setting_goto_otc">已设置好，前往OTC交易</string>
    <string name="net_account">%1$s账户</string>
    <string name="qr_code">收款码</string>
    <string name="upload_qr_code">上传收款码</string>
    <string name="save_net_setting">保存%1$s账号设置</string>
    <string name="bank_name">银行名称</string>
    <string name="swift">SWIFT</string>
    <string name="save_usd_setting">保存USD账号设置</string>
    <string name="username">用户名</string>
    <string name="net_account_2">%1$s账号</string>
    <string name="hint_name">默认显示，可以修改</string>
    <string name="hint_bank">请选择银行卡</string>
    <string name="hint_bank_address">请输入开户地址</string>
    <string name="hint_bank_card">请输入银行卡号</string>
    <string name="hint_bank_card_confirm">请再输入一次</string>
    <string name="hint_setting_tx_pwd">请输入密码</string>
    <string name="hint_note">请输入备注信息，少于20字</string>
    <string name="hint_net_account">请输入%1$s账号</string>
    <string name="hint_enter_net_account">请输入账户</string>
    <string name="hint_bank_name">请输入银行名称</string>
    <string name="hint_swift">请输入SWIFT</string>
    <string name="toast_not_complete">有未完成的内容，是否离开？</string>
    <string name="toast_add_bank_suc">新增银行卡成功!</string>
    <string name="toast_update_bank_suc">更新银行卡成功!</string>
    <string name="toast_update_bank_status_suc">更新银行卡状态成功!</string>
    <string name="toast_add_account_suc">新增账户成功!</string>
    <string name="toast_update_account_suc">更新账户成功!</string>
    <string name="toast_update_account_status_suc">更新账户状态成功!</string>
    <string name="toast_add_usd_suc">新增usd成功!</string>
    <string name="toast_update_usd_suc">更新usd成功!</string>
    <string name="toast_update_usd_status_suc">更新usd状态成功!</string>
    <string name="tx_price">交易单价</string>
    <string name="tx_quantity">交易数量</string>
    <string name="tx_amount">交易金额</string>
    <string name="tx_fee">手续费</string>
    <string name="seller">卖家</string>
    <string name="buyer">买家</string>
    <string name="payer">付款人</string>
    <string name="order_time">下单时间</string>
    <string name="order_number">订单号</string>
    <string name="payment_refer">付款参考号</string>
    <string name="payment_method">付款方式</string>
    <string name="bank_card_info">银行</string>
    <string name="bank_card_number">银行卡卡号</string>
    <string name="payment_receiver">收款人</string>
    <string name="contact_info">联系信息</string>
    <string name="explanation_for_seller">买家已下订单，请耐心等待买家付款，用户确认付款后，平台将会短信邮件提醒您，买家确认付款后，请于24H内放币给买家</string>
    <string name="explanation_for_buyer">请使用选定好的付款方式进行付款，方便卖家查账，尽快放行数字资产</string>
    <string name="have_paid_pls_confirm">如您已经向卖家转账付款，请务必点击“已付款”，在付款信息中备注付款参考号以免造成资金损失</string>
    <string name="cancel_order_pls_confirm">确认取消订单吗?请输入您的用户名</string>
    <string name="cancel_order">取消订单</string>
    <string name="left_time">已付款，剩余%1$d分%2$d秒</string>
    <string name="have_paid">已付款</string>
    <string name="cancel_exchange">取消交易</string>
    <string name="cancel_appeal">取消申诉</string>
    <string name="submit_appeal">提出申诉</string>
    <string name="appeal_immediately">立即申诉</string>
    <string name="appeal_reason">申诉理由</string>
    <string name="appeal_evidence">申诉证据 </string>
    <string name="appeal_evidence_images">(可上传付款截图，最多上传3张)</string>
    <string name="confirm_appeal">确认申诉</string>
    <string name="account">账号</string>
    <string name="release">放行</string>
    <string name="tx_buy_confirm">确认以 %1$s 购买 %2$s?</string>
    <string name="cancel_appeal_ensure">确认取消申诉</string>
    <string name="appeal_time">申诉时间</string>
    <string name="appeal_evidences">申诉凭证</string>
    <string name="price_with_colon">单价：</string>
    <string name="money_amount">金额</string>
    <string name="buy_in">买入</string>
    <string name="pls_enter_buy_or_sell_amount">请输入%1$sMyAwardContract</string>
    <string name="quantity_with_num_value">数量：%1$s</string>
    <string name="limit_amount">限额(%1$s)：</string>
    <string name="limit_amount_2_args">限额(%1$s)：%2$s</string>
    <string name="actually_buy_or_sell">实际%1$s：%2$s</string>
    <string name="exchange_total_amount">交易总额：%1$s%2$s</string>
    <string name="toast_order_timeout">订单已超时,无法进行操作!</string>
    <string name="toast_wrong_username">输入的用户名错误</string>
    <string name="toast_empty_username">用户名不能为空</string>
    <string name="toast_cancel_order_suc">取消订单成功!</string>
    <string name="toast_release_coin_suc">放币成功!</string>
    <string name="toast_enter_reason">请填写原因和图片</string>
    <string name="toast_submit_appeal_suc">提交申诉成功!</string>
    <string name="toast_cancel_appeal_suc">取消申诉成功!</string>
    <string name="err_content_not_empty">内容不能为空</string>
    <string name="err_card_not_same">卡号不一致</string>
    <string name="err_remark_less_than_20">备注少于20字</string>
    <string name="notice_have_ordered_pls_pay">您已成功下单，请及时付款</string>
    <string name="notice_wait_buyer_pay">请等待买家付款</string>
    <string name="notice_have_paid_wait_release">您已成功付款，请等候卖家放行 %1$s</string>
    <string name="notice_have_paid_pls_release">买家已经付款，请 24h 放行数字资产</string>
    <string name="notice_have_appealed_wait">您已申诉 %1$s，客服一日之内将会处理</string>
    <string name="notice_have_been_appealed">您被 %1$s 申诉，客服一日之内将会处理</string>
    <string name="notice_exchange_has_canceled">交易已取消</string>
    <string name="notice_exchange_has_completed">交易已经完成</string>
    <string name="warning_text_warning">交易提醒</string>
    <string name="warning_text_warm_notice">温馨提示</string>
    <string name="warning_text_appeal_explanation">1. 提交前请确认提交的申诉证据的有效性，提及后，客服会及时根据您的申诉材料进行评估判定\n
        2. 只能申诉一次，不能多次提交申诉\n
        3. 申诉后，请耐心等待，如果确认买家已付款，客服将会自动放行数字资产，如果作假，将会影响申诉方的信用记录，平台将会解冻卖家的数字资产
    </string>
    <string name="warning_text_explanation">持币一方视为卖家，出钱一方视为买家。以下作为双方的统称</string>
    <string name="warning_text_exchange">1. 买家汇款将直接进入卖家账户，交易过程中卖家出售的数字资产由平台托管\n
        2. 买家请在规定时间内完成付款，请务必点击“已付款”，卖家确认收款后，系统会将数字资产划到您的账户\n
        3. 买家超过 15Min 未付款或者未点击“已付款”，订单会因超时而超时取消，造成的损失将由买家自主承担\n
        4. 如果 24H 还未收到数字资产，请在平台提出申诉，客服将会在一日内进行处理；如果买家确实付款，平台将会将数字资产发放给买家，如果经查实恶意申诉，严重将会封锁该平台的账号\n
        5. 只有一次申诉机会，请谨慎提交申诉资料，申诉方才有取消申诉的权利\n
        6. 买家可以取消交易，但是如果当日取消订单达 3 次，将会限制当日购买功能
    </string>
    <string name="allIn">全部买入</string>
    <string name="otc_order_type1">全部</string>
    <string name="otc_order_type2">待付款</string>
    <string name="otc_order_type3">待放币</string>
    <string name="otc_order_type4">已完成</string>
    <string name="otc_order_type5">已取消</string>
    <string name="otc_order_type6">申诉中</string>
    <string name="ads">新鲜资讯</string>
    <string name="adsMore">更多</string>
    <string name="buyPrice">委托价格</string>
    <string name="buyAccount">委托数量</string>
    <string name="type1">我的OTC</string>
    <string name="type2">我的账户</string>
    <string name="type3">我的订单</string>
    <string name="type4">我的邀请</string>
    <string name="type5">身份认证</string>
    <string name="type6">安全中心</string>
    <string name="type7">客服中心</string>
    <string name="type8">系统设置</string>
    <string name="type9">新手指南</string>
    <string name="agreement">我已阅读并同意</string>
    <string name="title_pattern_setting">设置手势密码</string>
    <string name="title_pattern_checking">验证手势密码</string>
    <string name="safe_phone">手机</string>
    <string name="safe_email">邮箱</string>
</resources>