<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15">

        <!-- 姓名 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/et_bank_name"
                style="@style/otc_item_input"
                android:hint="@string/hint_name" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 收款银行 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bank_bank_text"
                style="@style/otc_item_text"
                android:text="@string/bank" />

            <TextView
                android:id="@+id/tv_bank_bank"
                style="@style/otc_item_input"
                android:drawableEnd="@mipmap/goto_next"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:hint="@string/hint_bank" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 开户地址 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/bank_address" />

            <EditText
                android:id="@+id/et_bank_address"
                style="@style/otc_item_input"
                android:hint="@string/hint_bank_address" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 银行卡号 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/bank_card" />

            <EditText
                android:id="@+id/et_bank_card"
                style="@style/otc_item_input"
                android:hint="@string/hint_bank_card"
                android:inputType="number" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 确认卡号 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/bank_card_confirm" />

            <EditText
                android:id="@+id/et_bank_card_confirm"
                style="@style/otc_item_input"
                android:hint="@string/hint_bank_card_confirm"
                android:inputType="number" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 交易密码 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/setting_tx_pwd" />

            <EditText
                android:id="@+id/et_bank_password"
                style="@style/otc_item_input"
                android:hint="@string/hint_setting_tx_pwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 备注 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/note" />

            <EditText
                android:id="@+id/et_bank_remark"
                style="@style/otc_item_input"
                android:maxLength="20"
                android:hint="@string/hint_note" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 启用 -->
        <RelativeLayout style="@style/common_item_holder_height70">

            <TextView
                android:id="@+id/tv_bank_using"
                style="@style/otc_item_text"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_0"
                android:text="@string/enable" />

            <CheckBox
                android:id="@+id/sw_bank_using"
                style="@style/lock_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View style="@style/common_separator_horizontal" />


        <Button
            android:id="@+id/btn_bank_save"
            style="@style/button_shadeless_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/bt_style_blue"
            android:text="@string/save_bank_setting"
            android:textColor="@color/text_white"
            />

        <TextView
            android:id="@+id/tv_bank_goto_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_30"
            android:text="@string/setting_goto_otc"
            android:textColor="@color/text_blue"
            style="@style/font_size_14" />


    </LinearLayout>


</ScrollView>