<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15">


        <!-- 姓名 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_usd_pe_name"
                style="@style/otc_item_input"
                android:hint="@string/hint_name" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 账号 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_usd_pe_account_text"
                style="@style/otc_item_text"
                android:text="@string/net_account_2" />

            <EditText
                android:id="@+id/et_usd_pe_account"
                style="@style/otc_item_input"
                android:hint="@string/hint_net_account" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 交易密码 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/setting_tx_pwd" />

            <EditText
                android:id="@+id/et_usd_pe_password"
                style="@style/otc_item_input"
                android:hint="@string/hint_setting_tx_pwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 启用 -->
        <RelativeLayout style="@style/common_item_holder_height70">

            <TextView
                style="@style/otc_item_text"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_0"
                android:text="@string/enable" />

            <CheckBox
                style="@style/lock_checkbox"
                android:id="@+id/sw_usd_pe_using"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View style="@style/common_separator_horizontal" />


        <Button
            android:id="@+id/btn_usd_pe_save"
            style="@style/button_shadeless_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/bt_style_blue"
            android:text="@string/save_net_setting"
            android:textColor="@color/text_white"
            />

        <TextView
            android:id="@+id/tv_usd_pe_goto_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_180"
            android:text="@string/setting_goto_otc"
            android:textColor="@color/text_blue"
            style="@style/font_size_14" />


    </LinearLayout>

</ScrollView>
