<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dp_15"
        android:paddingStart="@dimen/dp_15">


        <!-- 姓名 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/et_cny_name"
                style="@style/otc_item_input"
                android:hint="@string/hint_name" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 账户 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cny_account_text"
                style="@style/otc_item_text"
                android:text="@string/net_account" />

            <EditText
                android:id="@+id/et_cny_account"
                style="@style/otc_item_input"
                android:hint="@string/hint_enter_net_account" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 收款码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_145"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/qr_code" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_cny_show_img"
                    android:layout_width="@dimen/dp_110"
                    android:layout_height="@dimen/dp_110"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_cny_upload"
                    android:layout_width="@dimen/dp_65"
                    android:layout_height="@dimen/dp_65"
                    android:layout_marginTop="@dimen/dp_10"
                    android:src="@drawable/img_cny_upload" />

                <TextView
                    android:id="@+id/tv_cny_upload_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/upload_qr_code"
                    android:textColor="@color/colorPrimaryDark"
                    style="@style/font_size_15"/>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 交易密码 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/setting_tx_pwd" />

            <EditText
                android:id="@+id/et_cny_password"
                style="@style/otc_item_input"
                android:hint="@string/hint_setting_tx_pwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 备注 -->
        <LinearLayout
            style="@style/common_item_holder_height70"
            android:orientation="vertical">

            <TextView
                style="@style/otc_item_text"
                android:text="@string/note" />

            <EditText
                android:id="@+id/et_cny_remark"
                style="@style/otc_item_input"
                android:maxLength="20"
                android:hint="@string/hint_note" />
        </LinearLayout>

        <View style="@style/common_separator_horizontal" />


        <!-- 启用 -->
        <RelativeLayout style="@style/common_item_holder_height70">

            <TextView
                style="@style/otc_item_text"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_0"
                android:text="@string/enable" />

                <CheckBox
                    style="@style/lock_checkbox"
                android:id="@+id/sw_cny_using"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View style="@style/common_separator_horizontal" />


        <Button
            android:id="@+id/btn_cny_save"
            style="@style/button_shadeless_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/bt_style_blue"
            android:text="@string/save_net_setting"
            android:textColor="@color/text_white"
             />

        <TextView
            android:id="@+id/tv_cny_goto_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/setting_goto_otc"
            android:textColor="@color/text_blue"
            style="@style/font_size_14" />


    </LinearLayout>
</ScrollView>
